--- a/week2/card/card.css
+++ b/week2/card/card.css
@@ -1,4 +1,68 @@
-.cards{
+/* *{
+    box-sizing: border-box;
+
+} */
+.flex-cards{
     display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
 }
+.footer{
+    display: flex;
+    gap: 20px;
+    justify-content: space-around;
+}
+.card{
+    flex-basis: 400px;
+    /* flex: 0px 0px 50px; */
+    /* border: 1px solid green; */
+    border-radius: 5px;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    
+    padding-bottom: 20px;
+    
+}
+.card img{
+    /* width: 10rem; */
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    max-width: 100%;
+}
+.written{
+    padding:0px 0px 0px 10px;  
+    /* margin: 0px 0px 0px 20px;                           trbl */
+} 
+h2{
+    margin: 10px 0px 0px 5px;
+    
+}
+.name{
+    margin: 0px 0px 20px 7px; 
+    font-weight: bold;
+    color: grey;
+}
+
+.para{
+    margin: 0px 0px 30px 7px; 
+    color: grey;
+}
+
+.btn{
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+
+    background-color: white;
+    color: grey
+}
+.card-icon{
+    width: 25px;
+    height: 25px;
+}
+
+.btn:nth-child(1){
+    margin-left: 7px;
+}
+
+
 
