--- a/week2/card/card.css
+++ b/week2/card/card.css
@@ -1,27 +1,47 @@
-/* *{
+*{
     box-sizing: border-box;
 
-} */
+}
 .flex-cards{
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+    align-items: center;
+}
+.flex1{
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+.card{
+    flex-basis: 300px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    padding-bottom: 10px;
+    
 }
 .footer{
     display: flex;
     gap: 20px;
     justify-content: space-around;
 }
-.card{
-    flex-basis: 400px;
-    /* flex: 0px 0px 50px; */
-    /* border: 1px solid green; */
-    border-radius: 5px;
-    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
-    padding-bottom: 20px;
+.space{
+    margin-right: 10px;
+}
+.image{
+    max-width: 35%;
+    max-height: 80%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+
+}
+.horizontal{
+    flex-basis: 140px;
+    display: flex;
     
 }
-.card img{
+.card .radius{
     /* width: 10rem; */
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -46,6 +66,10 @@ h2{
     color: grey;
 }
 
+.margin-up{
+    margin: 10px 0px 30px 7px; 
+}
+
 .btn{
     font-size: 16px;
     font-weight: bold;
@@ -63,5 +87,30 @@ h2{
     margin-left: 7px;
 }
 
+.card .no-radius{
+    max-width: 100%;
+}
 
+.left-btns{
+    width: 200px;
+}
+
+/* .nothing{
+    width: 200px;
+} */
+
+.right-icons{
+    justify-content: flex-end;
+} 
+/* .heart{
+    margin: 10px;
+} */
+
+.over{
+    position: relative;
+}
+.overlap-text{
+    position: absolute;
+    top: 40%;
+    }
 
