--- a/week2/drawer/drawer.css
+++ b/week2/drawer/drawer.css
@@ -1,14 +1,19 @@
 html{
     font-size: 100%;
+    font-family: 'DM Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     margin: 0;
 }
 
-
+/* hr{
+    width: 100%;
+} */
 
 .main-container{
     display: flex;
+    
 }
 
 .complete-area{
@@ -16,12 +21,30 @@ body{
     flex-direction: column;
     width: 100%;
     height: 100%;
+    
+    
+}
+.heading{
+    width: 250px;
+    padding-left: 10px;
 }
 .head{
-    width: 290px;
-    border-bottom: red;
-    /* background-color: darkorchid; */
+    margin-bottom: 0px;
 }
+h4{
+    color: rgb(110, 109, 109);
+    
+}
+h5{
+    margin: 5px;
+    color: rgb(110, 109, 109);
+    font-weight: 600;
+}
+.label{
+    margin-left: 15px;
+    margin-bottom: 0px;
+}
+
 .drawer-list{
     height: 100%;
     background-color: cornsilk;
@@ -31,12 +54,15 @@ body{
     flex-direction: column;
 }
 .content{
-    background-color: rgb(200, 211, 243);
+    /* background-color: rgb(200, 211, 243); */
     padding: 20px;
-    font-size: 150% ;
+    font-size: 130% ;
+}
+hr{
+    border-top: 1px solid rgb(206, 203, 203);
 }
 .border{
-    border-right: 1px solid cadetblue;
+    border-right: 1px solid rgb(206, 203, 203);
     height: 100vh;
 }
 ul{
@@ -58,19 +84,27 @@ ul{
 
 }
 .user-choose{
-    height: 150px;
+    height: 100%;
     overflow-y: scroll;
+    font-weight: 600;
 }
 .list2{
     padding: 1rem;
 }
+i{
+    margin-right: 20px;
+    margin-left: 0px;
+}
+
 .choosing-list{
     padding: 10px;
-    transition-duration: 0.4s;
+    margin: 10px;
+    transition-duration: 0.2s;
 }
 .choosing-list:hover{
-    background: rgb(196, 194, 194);
+    background: rgb(226, 224, 224);
     border-radius: 5px;
+    color: #6200ee;
 }
 .user-name{
     padding : 1rem;
@@ -79,12 +113,14 @@ ul{
 
 .content-head{
     /* text-align: center; */
-    font-size: 150%;
+    font-size: 130%;
     /* height: 60px; */
     /* padding-left: 20px; */
     background-color: #6200ee;
 }
 h3{
     padding-left:  20px;
+    margin: 20px;
     color: #fff;
 }
+
