--- a/week2/snackbar/snackbar.css
+++ b/week2/snackbar/snackbar.css
@@ -1,19 +1,37 @@
-.main{
-    height: 100vh;
-    width: 100%;
+.main-container{
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.bottom-center, .bottom-right{
+    height: 250px;
+    width: 500px;
+    display: flex;
+    background-color: thistle;
+    border-radius: 5px;
+}
+.bottom-center{
+    
+    align-items:flex-end;
     justify-content: center;
-    background-color: whitesmoke;
+    
     /* font-family: Roboto,sans-serif; */
+}
+.bottom-right{
+    align-items: flex-end;
+}
+.right{
+    margin-left: auto;
+    margin-right: 5px;
 }
 .container{
     display: flex;
     background-color: rgb(66, 65, 65);
+    margin-bottom: 5px;
     justify-content: space-around;
     width: 400px;
     color: whitesmoke;
-    /* padding: 13px 10px 10px 10px; */
+    
     border-radius: 5px;
     font-weight: 400;
     font-family: Roboto,sans-serif; 
@@ -25,6 +43,27 @@
     font-weight: bold;
     color: #bb86fc;
 }
+h3{
+    color: rgb(184, 98, 184);
+}
+.stacked{
+    display: block;
+}
+.para{
+    margin: 10px;
+    text-align: center;
+}
+.icon-btn{
+    display: flex;
+    width: fit-content;
+    margin-left:auto ;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    gap: 20px;
+    
+    
+}
+
 
 
 
